# cpp-othello

./: CMakeLists.txt  README.md  setup.sh
apps/: CMakeLists.txt  OthelloClient.h  main.cpp  othello.cpp  othelloClient.cpp  othelloClientMain.cpp
include/othello/: Board.h  Game.h  Player.h  Score.h
src/: Board.cpp  Board.h  CMakeLists.txt  Formula.cpp  Formula.h  Game.cpp  Player.cpp  Player.h  Score.cpp  Score.h  main.cpp
test/: BoardTest.cpp  CMakeLists.txt  Formula-test.cpp  PlayerTest.cpp  ScoreTest.cpp
tests/: BoardTest.cpp  CMakeLists.txt  PlayerTest.cpp  ScoreTest.cpp
